# fate

./: Cargo.toml  README.md
example/: Fate.toml
example/src/: main.fate
src/: build.rs  cfg.rs  diagnostic.rs  lsp.rs  main.rs  new.rs  span.rs
std/: alloc.fate  arch.fate  lib.fate
std/arch/: gfx.fate
template/: Fate.toml
template/src/: lib.fate
