[package]
name = "fate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "4.4.18", features = ["derive"] }
indexmap = "2.2.2"
lazy-regex = "3.1.0"
logos = "0.14.0"
thiserror = "1.0.56"
